update the pot files for newly added words
Change-Id: Ifb2435a384ae5c8a6ef711fa51893dd2858d397c

--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-22 18:39+0800\n"
+"POT-Creation-Date: 2022-07-23 18:15+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3225,7 +3225,9 @@ msgstr ""
 msgid "The printer is busy on other print job"
 msgstr ""
 
-msgid "Printer firmware does not support material = >ams slot mapping."
+msgid ""
+"The filament index exceeds the AMS's slot count and cannot send the print "
+"job."
 msgstr ""
 
 msgid ""
@@ -3236,6 +3238,11 @@ msgstr ""
 msgid ""
 "Please click each filament above to specify its mapping AMS slot before "
 "sending the print job"
+msgstr ""
+
+msgid ""
+"The printer firmware only supports sequential mapping of filament => AMS "
+"slot."
 msgstr ""
 
 msgid "Preparing print job"
