--- a/bbl/i18n/de/BambuStudio_de.po
+++ b/bbl/i18n/de/BambuStudio_de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-22 18:39+0800\n"
+"POT-Creation-Date: 2022-07-23 18:15+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -3431,7 +3431,9 @@ msgstr ""
 msgid "The printer is busy on other print job"
 msgstr "The printer is busy with another print job."
 
-msgid "Printer firmware does not support material = >ams slot mapping."
+msgid ""
+"The filament index exceeds the AMS's slot count and cannot send the print "
+"job."
 msgstr ""
 
 msgid ""
@@ -3447,6 +3449,11 @@ msgid ""
 msgstr ""
 "Please click each filament above to specify its mapping AMS slot before "
 "sending the print job"
+
+msgid ""
+"The printer firmware only supports sequential mapping of filament => AMS "
+"slot."
+msgstr ""
 
 msgid "Preparing print job"
 msgstr "Preparing print job"
