--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Slic3rPE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-22 18:39+0800\n"
+"POT-Creation-Date: 2022-07-23 18:15+0800\n"
 "PO-Revision-Date: 2022-07-22 13:28+0800\n"
 "Last-Translator: Jiang Yue <maze1024@gmail.com>\n"
 "Language-Team: \n"
@@ -1228,8 +1228,8 @@ msgid ""
 "Bambu Studio is based on PrusaSlicer by PrusaResearch and SuperSlicer by "
 "Merill(supermerill)."
 msgstr ""
-"Bambu Studio是以PrusaResearch的PrusaSlicer和Merill的SuperSlicer"
-"（supermerill）为基础的。"
+"Bambu Studio是以PrusaResearch的PrusaSlicer和Merill（supermerill）的"
+"SuperSlicer为基础的。"
 
 msgid "PrusaSlicer is originally based on Slic3r by Alessandro Ranellucci."
 msgstr "MerillPrusasicle最初是以Alessandro Ranellucci为基础的Slic3r。"
@@ -3309,8 +3309,12 @@ msgstr "打印机正在执行指令，请在其结束后重新发起打印"
 msgid "The printer is busy on other print job"
 msgstr "打印机正在执行其他打印任务"
 
-msgid "Printer firmware does not support material = >ams slot mapping."
-msgstr "打印机固件不支持材料=>AMS槽位映射"
+msgid ""
+"The filament index exceeds the AMS's slot count and cannot send the print "
+"job."
+msgstr ""
+"打印机固件仅支持材料=>AMS槽位的顺序映射。材料编号超过AMS的槽位数量，无法发送"
+"打印任务。"
 
 msgid ""
 "Filaments to AMS slots mappings have been established. You can click a "
@@ -3323,6 +3327,11 @@ msgid ""
 "Please click each filament above to specify its mapping AMS slot before "
 "sending the print job"
 msgstr "请在发送打印前点击上方各个耗材丝，指定其所对应的AMS槽位"
+
+msgid ""
+"The printer firmware only supports sequential mapping of filament => AMS "
+"slot."
+msgstr "打印机固件版本仅支持材料=>AMS槽位的顺序映射。"
 
 msgid "Preparing print job"
 msgstr "正在准备打印任务"
@@ -6047,6 +6056,9 @@ msgstr "支撑：正在修补层%d的空洞"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "支撑：正在生长层%d的树枝"
+
+#~ msgid "Printer firmware does not support material = >ams slot mapping."
+#~ msgstr "打印机固件不支持材料=>AMS槽位映射"
 
 #~ msgid "Creating"
 #~ msgstr "正在创建"
