--- a/bbl/i18n/de/BambuStudio_de.po
+++ b/bbl/i18n/de/BambuStudio_de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-23 18:15+0800\n"
+"POT-Creation-Date: 2022-07-27 15:03+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -52,8 +52,8 @@ msgstr ""
 msgid "Perform"
 msgstr "Ausführen"
 
-msgid "Fragment area"
-msgstr "Fragment area"
+msgid "Gap area"
+msgstr ""
 
 msgid "Set pen size"
 msgstr "Pinselgröße festlegen"
@@ -123,9 +123,6 @@ msgstr "Wähle Material"
 
 msgid "Edge detection"
 msgstr "Kantenerkennung"
-
-msgid "Clear all"
-msgstr "Alles löschen"
 
 msgid "Triangles"
 msgstr "Dreiecke"
@@ -430,8 +427,11 @@ msgstr "BambuStudio hat eine unbehandelte Ausnahme erhalten: %1%"
 msgid "Downloading Bambu Network plug-in"
 msgstr ""
 
+msgid "Incorrect password"
+msgstr ""
+
 #, c-format, boost-format
-msgid "Connect %s[SN:%s] failed!"
+msgid "Connect %s failed! [SN:%s, code=%s]"
 msgstr ""
 
 msgid ""
@@ -811,6 +811,9 @@ msgstr "Schließen"
 msgid "Name"
 msgstr "Name"
 
+msgid "Fila."
+msgstr ""
+
 #, c-format, boost-format
 msgid "%1$d error repaired"
 msgid_plural "%1$d errors repaired"
@@ -1101,6 +1104,9 @@ msgid ""
 msgstr ""
 "Anordnen fehlgeschlagen. Bei der Verarbeitung von Objektgeometrien wurden "
 "einige Ausnahmen gefunden."
+
+msgid "Arranging"
+msgstr "Anordnen"
 
 msgid "Arranging canceled."
 msgstr "Anordnen abgebrochen."
@@ -1632,13 +1638,6 @@ msgstr ""
 "Nein - Verzichten Sie dieses Mal auf den Spiralmodus"
 
 msgid ""
-"When recording timelapse without toolhead, it is recommended to add a "
-"\"Timelapse Wipe Tower\" \n"
-"by right-click the empty position of build plate and choose \"Add Primitive"
-"\"->\"Timelapse Wipe Tower\".\n"
-msgstr ""
-
-msgid ""
 "Prime tower does not work when Adaptive Layer Height or Independent Support "
 "Layer Height is on.\n"
 "Which do you want to keep?\n"
@@ -2133,6 +2132,9 @@ msgid ""
 msgstr ""
 "You can find it in \"Settings > Network > Connection code\"\n"
 "on the printer, as shown in the figure:"
+
+msgid "Invalid input."
+msgstr ""
 
 msgid "Application is closing"
 msgstr "Anwendung schließt"
@@ -3496,6 +3498,13 @@ msgstr "Speichere aktuelle %s"
 msgid "Delete this preset"
 msgstr "Lösche diese Voreinstellung"
 
+msgid ""
+"When recording timelapse without toolhead, it is recommended to add a "
+"\"Timelapse Wipe Tower\" \n"
+"by right-click the empty position of build plate and choose \"Add Primitive"
+"\"->\"Timelapse Wipe Tower\".\n"
+msgstr ""
+
 msgid "Line width"
 msgstr "Breite der Linie"
 
@@ -4573,6 +4582,12 @@ msgstr "Druckbarer Bereich"
 
 msgid "Bed exclude area"
 msgstr "ausgenommene Druckbettfläche"
+
+msgid ""
+"Unprintable area in XY plane. For example, X1 Series printers use the front "
+"left corner to cut filament during filament change. The area is expressed as "
+"polygon by points in following format: \"XxY, XxY, ...\""
+msgstr ""
 
 msgid "Elephant foot compensation"
 msgstr "Elefantenfußkompensation"
@@ -6460,6 +6475,12 @@ msgstr "Support: fix holes at layer %d"
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: propagate branches at layer %d"
 
+#~ msgid "Fragment area"
+#~ msgstr "Fragment area"
+
+#~ msgid "Clear all"
+#~ msgstr "Alles löschen"
+
 #~ msgid "Creating"
 #~ msgstr "Creating"
 
@@ -6509,9 +6530,6 @@ msgstr "Support: propagate branches at layer %d"
 #~ "Ein Objekt ragt über die Begrenzung der Druckplatte.\n"
 #~ "Lösen Sie das Problem, indem Sie es vollständig innerhalb oder außerhalb "
 #~ "der Druckplatte verschieben."
-
-#~ msgid "Arranging"
-#~ msgstr "Anordnen"
 
 #~ msgid "Ctrl + Any arrow"
 #~ msgstr "Strg + beliebiger Pfeil"
