--- a/bbl/i18n/fr/BambuStudio_fr.po
+++ b/bbl/i18n/fr/BambuStudio_fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-23 18:15+0800\n"
+"POT-Creation-Date: 2022-07-27 15:03+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -52,8 +52,8 @@ msgstr ""
 msgid "Perform"
 msgstr "Exécuter"
 
-msgid "Fragment area"
-msgstr "Fragment area"
+msgid "Gap area"
+msgstr ""
 
 msgid "Set pen size"
 msgstr "Définir la taille du stylo"
@@ -123,9 +123,6 @@ msgstr "Choisissez le filament"
 
 msgid "Edge detection"
 msgstr "Détection des contours"
-
-msgid "Clear all"
-msgstr "Tout effacer"
 
 msgid "Triangles"
 msgstr "Triangles"
@@ -433,8 +430,11 @@ msgstr "BambuStudio a reçu une exception non gérée : %1%"
 msgid "Downloading Bambu Network plug-in"
 msgstr ""
 
+msgid "Incorrect password"
+msgstr ""
+
 #, c-format, boost-format
-msgid "Connect %s[SN:%s] failed!"
+msgid "Connect %s failed! [SN:%s, code=%s]"
 msgstr ""
 
 msgid ""
@@ -814,6 +814,9 @@ msgstr "Bloquer"
 msgid "Name"
 msgstr "Nom"
 
+msgid "Fila."
+msgstr ""
+
 #, c-format, boost-format
 msgid "%1$d error repaired"
 msgid_plural "%1$d errors repaired"
@@ -1097,6 +1100,9 @@ msgid ""
 msgstr ""
 "Échec de l'arrangement. Trouvé quelques exceptions lors du traitement des "
 "géométries d'objets."
+
+msgid "Arranging"
+msgstr ""
 
 msgid "Arranging canceled."
 msgstr "Agencement annulé."
@@ -1610,13 +1616,6 @@ msgstr ""
 "densité de remplissage clairsemée est à 0"
 
 msgid ""
-"When recording timelapse without toolhead, it is recommended to add a "
-"\"Timelapse Wipe Tower\" \n"
-"by right-click the empty position of build plate and choose \"Add Primitive"
-"\"->\"Timelapse Wipe Tower\".\n"
-msgstr ""
-
-msgid ""
 "Prime tower does not work when Adaptive Layer Height or Independent Support "
 "Layer Height is on.\n"
 "Which do you want to keep?\n"
@@ -2107,6 +2106,9 @@ msgid ""
 msgstr ""
 "You can find it in \"Settings > Network > Connection code\"\n"
 "on the printer, as shown in the figure:"
+
+msgid "Invalid input."
+msgstr ""
 
 msgid "Application is closing"
 msgstr "L'application se ferme"
@@ -3468,6 +3470,13 @@ msgstr "Enregistrer l'état actuel %s"
 msgid "Delete this preset"
 msgstr "Supprimer ce préréglage"
 
+msgid ""
+"When recording timelapse without toolhead, it is recommended to add a "
+"\"Timelapse Wipe Tower\" \n"
+"by right-click the empty position of build plate and choose \"Add Primitive"
+"\"->\"Timelapse Wipe Tower\".\n"
+msgstr ""
+
 msgid "Line width"
 msgstr "Largeur de ligne"
 
@@ -4547,6 +4556,12 @@ msgstr "Zone imprimable"
 
 msgid "Bed exclude area"
 msgstr "Zone d'exclusion de lit"
+
+msgid ""
+"Unprintable area in XY plane. For example, X1 Series printers use the front "
+"left corner to cut filament during filament change. The area is expressed as "
+"polygon by points in following format: \"XxY, XxY, ...\""
+msgstr ""
 
 msgid "Elephant foot compensation"
 msgstr "Compensation de l'effet patte d'éléphant"
@@ -6441,6 +6456,12 @@ msgstr "Support: fix holes at layer %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: propagate branches at layer %d"
+
+#~ msgid "Fragment area"
+#~ msgstr "Fragment area"
+
+#~ msgid "Clear all"
+#~ msgstr "Tout effacer"
 
 #~ msgid "Creating"
 #~ msgstr "Creating"
