--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-23 18:15+0800\n"
+"POT-Creation-Date: 2022-07-27 15:03+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -52,8 +52,8 @@ msgstr ""
 msgid "Perform"
 msgstr "Perform"
 
-msgid "Fragment area"
-msgstr "Fragment area"
+msgid "Gap area"
+msgstr ""
 
 msgid "Set pen size"
 msgstr "Selecteer pen formaat"
@@ -123,9 +123,6 @@ msgstr "Kies filament"
 
 msgid "Edge detection"
 msgstr "Rand detectie"
-
-msgid "Clear all"
-msgstr "Alles wissen"
 
 msgid "Triangles"
 msgstr "Driehoeken"
@@ -428,8 +425,11 @@ msgstr "Er is een onbekende uitzondering opgetreden in BambuStudio : %1%"
 msgid "Downloading Bambu Network plug-in"
 msgstr ""
 
+msgid "Incorrect password"
+msgstr ""
+
 #, c-format, boost-format
-msgid "Connect %s[SN:%s] failed!"
+msgid "Connect %s failed! [SN:%s, code=%s]"
 msgstr ""
 
 msgid ""
@@ -810,6 +810,9 @@ msgstr "Vergrendelen"
 msgid "Name"
 msgstr "Naam"
 
+msgid "Fila."
+msgstr ""
+
 #, c-format, boost-format
 msgid "%1$d error repaired"
 msgid_plural "%1$d errors repaired"
@@ -1103,6 +1106,9 @@ msgid ""
 msgstr ""
 "Het rangschikken is mislukt. Er zijn enkele uitzonderingen gevonden tijdens "
 "het verwerken van het object."
+
+msgid "Arranging"
+msgstr ""
 
 msgid "Arranging canceled."
 msgstr "Rangschikken geannuleerd."
@@ -1628,13 +1634,6 @@ msgstr ""
 "Nee - Pas de vaas modus deze keer niet toe"
 
 msgid ""
-"When recording timelapse without toolhead, it is recommended to add a "
-"\"Timelapse Wipe Tower\" \n"
-"by right-click the empty position of build plate and choose \"Add Primitive"
-"\"->\"Timelapse Wipe Tower\".\n"
-msgstr ""
-
-msgid ""
 "Prime tower does not work when Adaptive Layer Height or Independent Support "
 "Layer Height is on.\n"
 "Which do you want to keep?\n"
@@ -2128,6 +2127,9 @@ msgid ""
 msgstr ""
 "You can find it in \"Settings > Network > Connection code\"\n"
 "on the printer, as shown in the figure:"
+
+msgid "Invalid input."
+msgstr ""
 
 msgid "Application is closing"
 msgstr "De toepassing wordt afgesloten"
@@ -3502,6 +3504,13 @@ msgstr "Bewaar huidige %s"
 msgid "Delete this preset"
 msgstr "Verwijder deze voorinstelling"
 
+msgid ""
+"When recording timelapse without toolhead, it is recommended to add a "
+"\"Timelapse Wipe Tower\" \n"
+"by right-click the empty position of build plate and choose \"Add Primitive"
+"\"->\"Timelapse Wipe Tower\".\n"
+msgstr ""
+
 msgid "Line width"
 msgstr "Lijn dikte"
 
@@ -4580,6 +4589,12 @@ msgstr "Gebeid waarbinnen geprint kan worden"
 
 msgid "Bed exclude area"
 msgstr "Uitgesloten printbed gebied"
+
+msgid ""
+"Unprintable area in XY plane. For example, X1 Series printers use the front "
+"left corner to cut filament during filament change. The area is expressed as "
+"polygon by points in following format: \"XxY, XxY, ...\""
+msgstr ""
 
 msgid "Elephant foot compensation"
 msgstr "\"Elephant foot\" compensatie"
@@ -6487,6 +6502,12 @@ msgstr "Support: fix holes at layer %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: propagate branches at layer %d"
+
+#~ msgid "Fragment area"
+#~ msgstr "Fragment area"
+
+#~ msgid "Clear all"
+#~ msgstr "Alles wissen"
 
 #~ msgid "Creating"
 #~ msgstr "Creating"
